...
          Column(
              modifier = Modifier.fillMaxSize().testTag("GroupsHome"),
              horizontalAlignment = Alignment.Start,
              verticalArrangement = Arrangement.spacedBy(0.dp, Alignment.Top),
          ) {
            LazyColumn(
                modifier = Modifier.padding(innerPadding).fillMaxSize().testTag("GroupsList"),
                verticalArrangement = Arrangement.spacedBy(0.dp, Alignment.Top),
                horizontalAlignment = Alignment.Start,
                content = {
                  items(groupList.value) { group ->
                    GroupItem(group, navigationActions, db, refresh)
                  }
...
  if (isTextFieldVisible) {
    OutlinedTextField(
        value = text,
        onValueChange = { text = it },
        label = { Text(stringResource(R.string.enter_link)) },
        modifier =
            Modifier.fillMaxWidth().height(100.dp).padding(16.dp).testTag("AddLinkTextField"),
        singleLine = true,
        colors =
            TextFieldDefaults.colors(
                focusedContainerColor = White,
                unfocusedContainerColor = White,
                unfocusedLabelColor = Blue,
...
