<resources>
    <string name="app_name">Study Buddies</string>
    <string name="type_a_message">Type a message</string>
    <string name="cancel">Cancel</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="download">Download</string>
...
